argocd/namespaced/argocd-application-controller-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              memory: 500Mi
              cpu: 0.1
            limits:
              cpu: 4
              memory: 3000Mi
