argocd/namespaced/argocd-notifications-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-notifications-controller
          args:
            - /usr/local/bin/argocd-notifications
            - "--loglevel=warn"
          resources:
            requests:
              memory: 0Mi
              cpu: 0
            limits:
              cpu: 1
              memory: 500Mi
