argocd/namespaced/argocd-redis-ha-haproxy-patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis-ha-haproxy
spec:
  template:
    spec:
      containers:
        - name: haproxy
          resources:
            requests:
              memory: 100Mi
              cpu: 0.1
            limits:
              cpu: 1
              memory: 500Mi
