argocd/namespaced/argocd-redis-ha-server-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              memory: 100Mi
              cpu: 0
            limits:
              cpu: 1
              memory: 500Mi
