argocd/namespaced/argocd-redis-sentinel-reset-patch.yaml
# https://github.com/argoproj/argo-cd/issues/16360#issuecomment-1833382072
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  template:
    spec:
      containers:
        - name: sentinel
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "sleep 30; redis-cli -p 26379 sentinel reset argocd",
                  ]
