argocd/namespaced/argocd-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          resources:
            requests:
              memory: 100Mi
              cpu: 0
            limits:
              cpu: 1
              memory: 1000Mi
