argocd/namespaced/delete-patch.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
