argocd/namespaced/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          resources:
            requests:
              memory: 100Mi
              cpu: 0.1
            limits:
              cpu: 1
              memory: 1000Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-notifications-controller
          resources:
            requests:
              memory: 100Mi
              cpu: 0.1
            limits:
              cpu: 1
              memory: 500Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis-ha-haproxy
spec:
  template:
    spec:
      containers:
        - name: haproxy
          resources:
            requests:
              memory: 100Mi
              cpu: 0.1
            limits:
              cpu: 1
              memory: 500Mi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              memory: 100Mi
              cpu: 0
            limits:
              cpu: 1
              memory: 500Mi
