argocd/namespaced/prometheus-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "metrics"
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-notifications-controller-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "metrics"
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "metrics"
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "metrics"
