argocd/namespaced/egress-network-policies.yaml
# internal only to reach API server
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-allow-internal-egress
spec:
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 10.0.0.0/8
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-controller-allow-internal-egress
spec:
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 10.0.0.0/8
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-allow-all-egress
spec:
  policyTypes:
    - Egress
  egress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-argocd-repo-server-allow-all-egress
spec:
  policyTypes:
    - Egress
  egress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
